Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-103988

State of QTreeWidgetItem not announce by screenreader

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • None
    • 6.4.0
    • None
    • Windows
    • 5aed3d3ae2 (qt/qtbase/6.3) 5aed3d3ae2 (qt/tqtc-qtbase/6.3)

    Description

      Steps to reproduce:

      -Create a tree using QTreeWidget and add some QTreeWidgetItem (expandable) on this tree

      Expected behavior:

      -Screenreader should be inform of state of a QTreeWidgetItem (colapsed or expanded)

      Actual behavior:

      -Screenreader don't know and so don't announce tree's state

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            anrocha André De La Rocha (Inactive)
            oreonan Corentin Bacqué-Cazenave
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes