Windows QPA: Report the expanded/collapsed state of tree items

Implement the ExpandCollapse UI Automation pattern for tree items,
so that accessibility tools like MS Narrator are able to report the
item state.

Fixes: QTBUG-103988
Change-Id: I1529bdb0104c6e29d8f28bc0bbb8a7fa4670c7ef
Reviewed-by: Oliver Wolff <oliver.wolff@qt.io>
(cherry picked from commit 9aaf105bad79203065d5e947acfc08d1c82faf86)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>